# Rasterizer

./: .gitignore  .gitmodules  CMakeLists.txt
include/: texture.h
src/: main.cpp  texture.cpp
